Fixed issues with alignment in the news bar and the talks section

--- a/website/static/website/css/news.css
+++ b/website/static/website/css/news.css
@@ -2,15 +2,17 @@
     float: left;
     padding-right: 0px;
     padding-bottom: 0px;
+    padding-top: 5px;
     vertical-align: top;
 }
 
 .news_content{
-   
+    text-align: justify;
 }
 
 .news-well p {
-    margin: 5px;
+    margin: 0px;
+    
 }
 
 
@@ -32,9 +34,9 @@
 
 .news_title{
     font-weight: bold;
-    font-size: 17px;
+    font-size: 14px;
     padding-top: 0px;
-    padding-left: 0px;
+    padding-left: 5px;
     padding-bottom: 0px;
     margin: 0 auto;
     line-height: 100%
@@ -42,10 +44,11 @@
     overflow: hidden;
 }
 
+
 .news_date{
     padding-top: 0px;
     font-size: 10px;
-    padding-left: 0px;
+    padding-left: 5px;
     padding-bottom: 0px;
     line-height: 100%;
     overflow: hidden;
